--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "dotenv": "^10.0.0",
     "font-awesome": "^4.7.0",
-    "vue": "^3.0.0"
+    "nprogress": "^0.2.0",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-0",
+    "vue-sweetalert2": "^5.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
